feat: fu swagger
